# automated-aur-docker

./: README.md  flake.nix
.github/workflows/: build-images.yaml  build.yaml  cleanup.yaml  rust-ci.yaml
build-package/: Dockerfile  buildpkg.py  custom-paru  entrypoint.sh  namcap-git-3.2.10.r10.ga6f9760-1-any.pkg.tar.zst
publish-package/: Dockerfile  entrypoint.sh  publishpkg.py
test-package/: Dockerfile  entrypoint.sh  testpkg.py
update-package-via-manifest/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  entrypoint.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
update-package-via-manifest/lib/: index.js  index.js.map
update-package-via-manifest/src/: commands.rs  index.ts  main.rs  steps.rs  util.ts
update-package-via-manifest/src/gha_subscriber/: mod.rs
update-package-via-manifest/src/providers/: equinox.rs  equinox.ts  github-releases.ts  github-tags.ts  github.ts  github_releases.rs  github_tags.rs  mod.rs
