[package]
name = "update-package-via-manifest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
gha = "0.1.8"
gha_main = "0.0.5"
glob = "0.3.3"
octocrab = "0.54.0"
regex = "1.13.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["full"] }
