[package]
name = "update-package-via-manifest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
gha = "0.1.8"
glob = "0.3.3"
regex = "1.13.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ureq = { version = "3.3.0", features = ["json"] }

[dev-dependencies]
tempfile = "3.27.0"
